--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	thinger-io/thinger.io@^2.16.0
+	adafruit/Adafruit Unified Sensor@^1.1.4
+	adafruit/DHT sensor library@^1.4.2
