--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	thinger-io/thinger.io@^2.16.0
 	adafruit/Adafruit Unified Sensor@^1.1.4
